<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_fragment_planner">Планнер</string>
    <string name="planner_fragment_picker">Выбрать день</string>
    <string name="empty_mealtimes">Добавляйте свои приёмы пищи и следите за своим питанием</string>
    <string name="fragment_title_add_mealtime">Добавить приём пищи</string>
    <string name="text_input_gramm">Вес (гр)</string>
    <string name="text_input_quantity">Количество порций</string>
    <string name="add_mealtimes_button">Добавить готовый рецепт</string>
    <string name="text_input_title">Название рецепта</string>
    <string name="save_button">Сохранить</string>
    <string name="fragment_planner_button">Отметить приём пищи</string>
    <string name="mealtime_tv_recipe">Выбрать рецепт:</string>
    <string name="choose_category">Выбирите категорию</string>
    <string name="choose_recipe">Выбирите рецепт</string>
    <string name="mealtime_quantity">%1$sx%2$sгр.</string>
</resources>