<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealtimeCreateFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fitsSystemWindows="true"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title=""
            app:layout_collapseMode="pin"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title"
        style="@style/BaseLargeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_margin_large"
        android:text="@string/fragment_title_add_mealtime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/quantityLabel"
        style="@style/BaseSmallTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginTop="@dimen/material_margin_normal"
        android:text="@string/text_input_quantity"
        app:layout_constraintEnd_toStartOf="@id/grammGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/grammLabel"
        style="@style/BaseSmallTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginTop="@dimen/material_margin_normal"
        android:text="@string/text_input_gramm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/grammGuideline"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/grammGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityTextInput"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_quantity"
        android:layout_marginStart="@dimen/material_margin_normal"
        android:layout_marginEnd="@dimen/material_margin_small"
        app:layout_constraintEnd_toStartOf="@id/grammGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantityLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:text="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/grammInputLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_input_gramm"
        android:layout_marginStart="@dimen/material_margin_small"
        android:layout_marginEnd="@dimen/material_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/grammGuideline"
        app:layout_constraintTop_toBottomOf="@id/grammLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gramEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:text="150" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvCategories"
        style="@style/BaseMediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_large"
        android:layout_margin="@dimen/material_margin_normal"
        android:text="@string/library_categories_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityTextInput" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategories"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Завтрак"
            app:chipCornerRadius="8dp"
            app:backgroundTint="@color/background_cards"
            android:paddingHorizontal="8dp"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Обед"
            app:chipCornerRadius="8dp"
            app:backgroundTint="@color/background_cards"
            android:paddingHorizontal="8dp"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Ужин"
            app:chipCornerRadius="8dp"
            app:backgroundTint="@color/background_cards"
            android:paddingHorizontal="8dp"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Перекусы"
            app:chipCornerRadius="8dp"
            app:backgroundTint="@color/background_cards"
            android:paddingHorizontal="8dp"/>
    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:id="@+id/tvRecipe"
        style="@style/BaseMediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_large"
        android:layout_margin="@dimen/material_margin_normal"
        android:text="@string/mealtime_tv_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupCategories" />

    <include
        android:id="@+id/includedRecipeItem"
        layout="@layout/recipe_item"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/material_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecipe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addRecipeButton"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/material_margin_normal"
        android:layout_marginBottom="@dimen/material_margin_normal"
        android:backgroundTint="@color/grey3"
        android:text="@string/save_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>